--- a/chart.html
+++ b/chart.html
@@ -19,7 +19,7 @@
       <canvas id="serverRank"></canvas>
     </div>
 
-    <div style="width: 50%; height: 300px; float: left">
+    <div style="width: 50%; height: 300px; float: left; margin-top: 200px">
       <canvas id="totalapi"></canvas>
     </div>
 
